[gd_scene load_steps=10 format=3 uid="uid://bi0i1nagrn1hf"]

[ext_resource type="Script" path="res://scripts/data_setup.gd" id="1_87lbl"]
[ext_resource type="Texture2D" uid="uid://kvk8oiao20m4" path="res://art/icons/Obermun.png" id="1_js6lg"]
[ext_resource type="Script" path="res://scripts/GridContainer.gd" id="3_i8m8r"]
[ext_resource type="Script" path="res://scripts/start_session.gd" id="4_stb0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvyph"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qehjq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ehh0"]

[sub_resource type="Theme" id="Theme_cdk4x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3mpu"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_87lbl")

[node name="BackGround" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.180392, 0.329412, 1)
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 45.0
offset_right = 193.0
offset_bottom = 301.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_js6lg")
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextEdit" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.603125
anchor_bottom = 0.03
offset_left = -242.0
offset_top = 182.0
offset_right = 90.0001
offset_bottom = 222.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_dvyph")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qehjq")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3ehh0")
text = "OberMUN 2024 Debate Manager"
editable = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
metadata/_edit_use_anchors_ = true

[node name="SelectionButtons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectCommitee" type="OptionButton" parent="CanvasLayer/SelectionButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_top = -32.0
offset_right = -220.0
offset_bottom = -1.0
grow_horizontal = 2
theme = SubResource("Theme_cdk4x")
theme_override_colors/font_color = Color(1, 1, 1, 1)
item_count = 7
selected = 0
popup/item_0/text = "Select a commitee"
popup/item_0/id = 0
popup/item_1/text = "CSW"
popup/item_1/id = 1
popup/item_2/text = "ECOSOC"
popup/item_2/id = 2
popup/item_3/text = "OHCHR"
popup/item_3/id = 3
popup/item_4/text = "UNEP"
popup/item_4/id = 4
popup/item_5/text = "UNSC"
popup/item_5/id = 5
popup/item_6/text = "WHO"
popup/item_6/id = 6

[node name="SelectTopic" type="OptionButton" parent="CanvasLayer/SelectionButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_top = -32.0
offset_right = 165.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
item_count = 2
selected = 0
popup/item_0/text = "Select a Topic"
popup/item_0/id = 0
popup/item_1/text = "Sample"
popup/item_1/id = 1

[node name="SelectSession" type="OptionButton" parent="CanvasLayer/SelectionButtons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 224.0
offset_top = -32.0
offset_right = 550.0
offset_bottom = -1.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
item_count = 1
selected = 0
popup/item_0/text = "Select a session"
popup/item_0/id = 0

[node name="Texts" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Commitee" type="TextEdit" parent="CanvasLayer/Texts"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -545.0
offset_top = -72.0
offset_right = -219.0
offset_bottom = -41.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Commitee:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Topics" type="TextEdit" parent="CanvasLayer/Texts"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_top = -72.0
offset_right = 165.0
offset_bottom = -41.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Topics:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Topics2" type="TextEdit" parent="CanvasLayer/Texts"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_top = 50.0
offset_right = 165.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Delegates:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Session" type="TextEdit" parent="CanvasLayer/Texts"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 225.0
offset_top = -72.0
offset_right = 551.0
offset_bottom = -41.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Session:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="UNEP Container" type="ScrollContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 66.0
offset_right = 165.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/UNEP Container"]
layout_mode = 2
script = ExtResource("3_i8m8r")

[node name="Select All" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = 242.0
offset_right = 164.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p3mpu")
text = "Select All"

[node name="Start Session" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 227.0
offset_top = 243.0
offset_right = 549.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p3mpu")
text = "Start Session"
script = ExtResource("4_stb0q")

[node name="Deselect All" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = 282.0
offset_right = 164.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_p3mpu")
text = "Deselect All"

[node name="Session" type="CanvasLayer" parent="."]
visible = false

[node name="BackGround" type="ColorRect" parent="Session"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.180392, 0.329412, 1)
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Session"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -518.0
offset_top = 100.0
offset_right = -262.0
offset_bottom = 356.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_js6lg")
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextEdit" parent="Session"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.603125
anchor_bottom = 0.03
offset_left = -697.0
offset_top = 237.0
offset_right = -365.0
offset_bottom = 277.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_dvyph")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qehjq")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3ehh0")
text = "OberMUN 2024 Debate Manager"
editable = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Delegates" type="TextEdit" parent="Session"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -771.0
offset_top = 306.0
offset_right = -445.0
offset_bottom = 337.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Delegates:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="SpeakerList" type="TextEdit" parent="Session"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -408.0
offset_top = 307.0
offset_right = -82.0
offset_bottom = 338.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Speaker's list:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="President" type="TextEdit" parent="Session"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 35.0
offset_right = 217.0
offset_bottom = 258.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Commitee:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Commitee" type="TextEdit" parent="Session"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 238.0
offset_top = 35.0
offset_right = 761.0
offset_bottom = 257.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
text = "Commitee:"
editable = false
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="UNEP Container" type="ScrollContainer" parent="Session"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 66.0
offset_right = 165.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Session/UNEP Container"]
layout_mode = 2
